<resources>
    <string name="app_name">Spbu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="gunakanoffline">Gunakan offline</string>
    <string name="selamat_datang">Selamat datang!</string>
    <string name="sub_login_text">Dengan menggunakan aplikasi ini, kamu bisa mencetak struk nota dengan mudah.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="kembali">Kembali</string>
    <string name="masukkan_username">Masukkan username</string>
    <string name="print_manual">Print manual</string>
    <string name="print_foto">Print foto</string>
    <string name="print">Print</string>
    <string name="history_print">History print</string>
    <string name="manual">Manual</string>
    <string name="foto">Foto</string>
    <string name="home">Home</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logo">Logo</string>
    <string name="nomor">Nomor</string>
    <string name="alamat">Alamat</string>
    <string name="keterangan">Keterangan</string>
    <string name="nomor_transaksi">Nomor Transaksi</string>
    <string name="shift">Shift</string>
    <string name="waktu_transaksi">Waktu Transaksi</string>
    <string name="detail">Detail</string>
    <string name="pulau_pompa">Pulau/Pompa</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_liter">Harga/Liter</string>
    <string name="volume">Volume</string>
    <string name="total_harga">Total Harga</string>
    <string name="operator">Operator</string>
    <string name="cash">Cash</string>
    <string name="informasi_kendaraan">Informasi Kendaraan</string>
    <string name="nomor_plat">Nomor Plat</string>
    <string name="odometer">Odometer</string>
    <string name="print_preview">Print Preview</string>
    <string name="header">Header</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="simpan">Simpan</string>
    <string name="hapus">Hapus</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="produk">Produk</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="nama">Nama</string>
    <string name="harga">Harga</string>
    <string name="koneksi_info">Koneksi Info</string>
    <string name="ubah">Ubah</string>
    <string name="buat_template_print">Buat template print</string>
    <string name="konektivitas">Konektivitas</string>
    <string name="hubungkan">Hubungkan</string>
    <string name="sambungan">Sambungan</string>
    <string name="letter_gothic">Letter Gothic</string>
    <string name="consola">Consola</string>
    <string name="cour">Cour</string>
    <string name="ltype">Ltype</string>
</resources>