<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/input_nama_produk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_weight="3"
        android:background="@drawable/edit_text_stroke"
        android:hint="@string/nama"
        android:padding="10dp" />

    <EditText
        android:layout_weight="3"
        android:inputType="numberDecimal"
        android:id="@+id/input_harga_produk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_stroke"
        android:hint="@string/harga"
        android:padding="10dp" />

    <Button
        android:id="@+id/button_hapus"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hapus"/>
</LinearLayout>
