<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layerType="software"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="80dp">

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/sambungan" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:text="Bluetooth"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_connect_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/hubungkan" />

                <TextView
                    android:id="@+id/text_status"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/button_connect_bluetooth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Status: Tidak terhubung dengan printer"/>


            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGray" />

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/buat_template_print"
                 />


            <TextView
                style="@style/SubHeaderTextStyle"
                android:text="@string/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_logo"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="3"
                    android:src="@drawable/logo" />

                <Button
                    android:id="@+id/button_change_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/ubah" />
            </LinearLayout>


            <TextView
                style="@style/SubHeaderTextStyle"
                android:text="@string/header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor" />

                <EditText
                    android:id="@+id/input_nomor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_stroke"
                    android:hint="@string/nomor"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama" />

                <EditText
                    android:id="@+id/input_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_stroke"
                    android:hint="@string/nama"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat" />

                <EditText
                    android:id="@+id/input_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_stroke"
                    android:hint="@string/alamat"
                    android:padding="10dp" />
            </LinearLayout>

            <TextView
                style="@style/SubHeaderTextStyle"
                android:text="@string/detail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operator" />

                <EditText
                    android:id="@+id/input_operator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_stroke"
                    android:hint="@string/operator"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/produk" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--                <com.airbnb.epoxy.EpoxyRecyclerView-->
                <!--                    android:focusableInTouchMode="true"-->
                <!--                    android:orientation="vertical"-->
                <!--                    android:id="@+id/recyclerNamaProduk"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent" />-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerNamaProduk"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical" />

                <Button
                    android:id="@+id/button_tambah"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Tambah"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>