<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="16dp"
                android:paddingBottom="50dp">

                <TextView
                    style="@style/SubHeaderTextStyle"
                    android:text="@string/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_logo"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="3"
                        android:src="@drawable/logo" />

                    <Button
                        android:id="@+id/button_change_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/ubah" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGray" />

                <TextView
                    style="@style/SubHeaderTextStyle"
                    android:text="@string/header" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nomor" />

                    <EditText
                        android:id="@+id/input_nomor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/nomor"
                        android:inputType="numberDecimal"
                        android:padding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama" />

                    <EditText
                        android:id="@+id/input_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/nama"
                        android:padding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alamat" />

                    <EditText
                        android:id="@+id/input_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/alamat"
                        android:padding="10dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGray" />

                <TextView
                    style="@style/SubHeaderTextStyle"
                    android:text="@string/keterangan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shift" />

                    <EditText
                        android:id="@+id/input_shift"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/shift"
                        android:inputType="number"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nomor_transaksi" />

                    <EditText
                        android:id="@+id/input_no_transaksi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/nomor_transaksi"
                        android:inputType="number"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waktu_transaksi" />

                    <EditText
                        android:id="@+id/input_waktu_transaksi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:focusable="true"
                        android:hint="@string/waktu_transaksi"
                        android:padding="10dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGray" />

                <TextView
                    style="@style/SubHeaderTextStyle"
                    android:text="@string/detail" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pulau_pompa" />

                    <EditText
                        android:id="@+id/input_pompa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/pulau_pompa"
                        android:inputType="number"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_produk" />


                    <AutoCompleteTextView
                        android:id="@+id/input_nama_produk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/nama_produk"
                        android:padding="10dp" />

                    <!--                <EditText-->
                    <!--                    android:id="@+id/input_nama_produk"-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:background="@drawable/edit_text_stroke"-->
                    <!--                    android:hint="@string/nama_produk"-->
                    <!--                    android:padding="10dp" />-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/harga_liter" />

                    <EditText
                        android:id="@+id/input_harga_per_liter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/harga_liter"
                        android:inputType="numberDecimal"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/volume" />

                    <EditText
                        android:id="@+id/input_volume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/volume"
                        android:inputType="numberDecimal"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_harga" />

                    <EditText
                        android:id="@+id/input_total_harga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/total_harga"
                        android:inputType="numberDecimal"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/operator" />

                    <EditText
                        android:id="@+id/input_operator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/operator"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash" />

                    <EditText
                        android:id="@+id/input_cash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/cash"
                        android:inputType="number"
                        android:padding="10dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGray" />

                <TextView
                    style="@style/SubHeaderTextStyle"
                    android:text="@string/informasi_kendaraan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nomor_plat" />

                    <EditText
                        android:id="@+id/input_nomr_plat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/nomor"
                        android:padding="10dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/odometer" />

                    <EditText
                        android:id="@+id/input_odometer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_stroke"
                        android:hint="@string/odometer"
                        android:padding="10dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGray" />

                            <TextView
                                style="@style/HeaderTextStyle"
                                android:text="@string/print_preview" />

                            <RelativeLayout
                                android:background="@color/colorGray"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_margin="10dp"
                                    android:background="@color/colorPrimary"
                                    android:layout_alignParentEnd="true"
                                    android:src="@drawable/ic_baseline_refresh_24"
                                    android:id="@+id/buttonRefresh"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                                <ImageView
                                    android:id="@+id/image_preview"
                                    android:layout_width="300dp"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:minHeight="400dp" />
                            </RelativeLayout>

                <Button
                    android:id="@+id/button_print"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rouded_container_2"
                    android:text="@string/print"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>