<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">

        <ImageView
            android:id="@+id/img_pertamina_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/img_welcome"
            app:layout_constraintStart_toStartOf="@+id/img_welcome"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_welcome"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_rounded_container"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selamat_datang"
                android:textAllCaps="false"
                android:textColor="@color/text_black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sub_login_text"
                android:textAllCaps="false"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_container"
                android:text="@string/lanjutkan"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

<!--            <Button-->
<!--                android:id="@+id/button_offline"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:background="@drawable/rounded_container"-->
<!--                android:text="@string/gunakanoffline"-->
<!--                android:textAllCaps="false"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold"-->
<!--                app:backgroundTint="@android:color/darker_gray" />-->

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>